# aerial-cuda-accelerated-ran

./: .gitignore
testBenches/: CMakeLists.txt
testBenches/perf/: 040_040_sweep_graphs_avg_F08.json  040_sweep_graphs_avg_F08.json  040_sweep_streams_avg_F08.json  060_060_sweep_graphs_avg_F08.json  060_060_sweep_graphs_avg_F08_kpi_report.md  060_060_sweep_graphs_avg_F08_kpi_table.csv  060_060_sweep_graphs_avg_F14.json  060_060_sweep_streams_avg_F14.json  066_066_sweep_graphs_avg_F08.json  132_132_sweep_graphs_avg_F08.json  F14_mMIMO_test_analysis.md  analyze_kpi.py  analyze_monitor.py  analyze_target_sweep.py  buffer-01.txt  buffer-02.txt  buffer-03.txt  buffer-04.txt  buffer-05.txt  buffer-06.txt  buffer-07.txt  buffer-08.txt  buffer-09.txt  buffer-10.txt  buffer-11.txt  buffer-12.txt  buffer-13.txt  buffer-14.txt  buffer-15.txt  buffer-16.txt  measure_delay_explanation.md  measure_flops_bandwidth.py  measure_k8s.py  measure_latency_direct.py  measure_prb_usage.py  measure_with_gpu_metrics.py  monitor_system.sh  parse_cubb_output.py  pdsch_full_16cell.txt  pdsch_only_16cell.txt  (+30 more)
testBenches/perf/cell_sweep_1-16cell_SM60_60_20260120_073324/: cell_sweep_analysis_report.md  cubb_01cell_SM60_60.txt  cubb_02cell_SM60_60.txt  cubb_03cell_SM60_60.txt  cubb_04cell_SM60_60.txt  cubb_05cell_SM60_60.txt  cubb_06cell_SM60_60.txt  cubb_07cell_SM60_60.txt  cubb_08cell_SM60_60.txt  cubb_09cell_SM60_60.txt  cubb_10cell_SM60_60.txt  cubb_11cell_SM60_60.txt  cubb_12cell_SM60_60.txt  cubb_13cell_SM60_60.txt  cubb_14cell_SM60_60.txt  cubb_15cell_SM60_60.txt  cubb_16cell_SM60_60.txt  sweep_summary.txt  throughput_01cell_SM60_60_throughput_analysis.json  throughput_02cell_SM60_60_throughput_analysis.json  throughput_03cell_SM60_60_throughput_analysis.json  throughput_04cell_SM60_60_throughput_analysis.json  throughput_05cell_SM60_60_throughput_analysis.json  throughput_06cell_SM60_60_throughput_analysis.json  throughput_07cell_SM60_60_throughput_analysis.json  throughput_08cell_SM60_60_throughput_analysis.json  throughput_09cell_SM60_60_throughput_analysis.json  throughput_10cell_SM60_60_throughput_analysis.json  throughput_11cell_SM60_60_throughput_analysis.json  throughput_12cell_SM60_60_throughput_analysis.json  throughput_13cell_SM60_60_throughput_analysis.json  throughput_14cell_SM60_60_throughput_analysis.json  throughput_15cell_SM60_60_throughput_analysis.json  throughput_16cell_SM60_60_throughput_analysis.json
testBenches/perf/cell_sweep_1-16cell_SM66_66_20260120_062822/: cell_sweep_analysis_report.md  cubb_01cell_SM66_66.txt  cubb_02cell_SM66_66.txt  cubb_03cell_SM66_66.txt  cubb_04cell_SM66_66.txt  cubb_05cell_SM66_66.txt  cubb_06cell_SM66_66.txt  cubb_07cell_SM66_66.txt  cubb_08cell_SM66_66.txt  cubb_09cell_SM66_66.txt  cubb_10cell_SM66_66.txt  cubb_11cell_SM66_66.txt  cubb_12cell_SM66_66.txt  cubb_13cell_SM66_66.txt  cubb_14cell_SM66_66.txt  cubb_15cell_SM66_66.txt  cubb_16cell_SM66_66.txt  sweep_summary.txt  throughput_01cell_SM66_66_throughput_analysis.json  throughput_02cell_SM66_66_throughput_analysis.json  throughput_03cell_SM66_66_throughput_analysis.json  throughput_04cell_SM66_66_throughput_analysis.json  throughput_05cell_SM66_66_throughput_analysis.json  throughput_06cell_SM66_66_throughput_analysis.json  throughput_07cell_SM66_66_throughput_analysis.json  throughput_08cell_SM66_66_throughput_analysis.json  throughput_09cell_SM66_66_throughput_analysis.json  throughput_10cell_SM66_66_throughput_analysis.json  throughput_11cell_SM66_66_throughput_analysis.json  throughput_12cell_SM66_66_throughput_analysis.json  throughput_13cell_SM66_66_throughput_analysis.json  throughput_14cell_SM66_66_throughput_analysis.json  throughput_15cell_SM66_66_throughput_analysis.json  throughput_16cell_SM66_66_throughput_analysis.json
testBenches/perf/iteration1000&delay0/: 040_040_sweep_graphs_avg_F08.json  040_040_sweep_graphs_avg_F08_500us_validation.json  060_060_sweep_graphs_avg_F08.json  060_060_sweep_graphs_avg_F08_500us_validation.json  066_066_sweep_graphs_avg_F08.json  066_066_sweep_graphs_avg_F08_500us_validation.json
testBenches/perf/iteration_1&delay0/: 040_040_sweep_graphs_avg_F08.json  040_040_sweep_graphs_avg_F08_500us_validation.json  060_060_sweep_graphs_avg_F08.json  060_060_sweep_graphs_avg_F08_500us_validation.json  066_066_sweep_graphs_avg_F08.json  066_066_sweep_graphs_avg_F08_500us_validation.json
testBenches/perf/iteration_1&delay=100000/: 040_040_sweep_graphs_avg_F08.json  040_040_sweep_graphs_avg_F08_500us_validation.json  060_060_sweep_graphs_avg_F08.json  060_060_sweep_graphs_avg_F08_500us_validation.json  066_066_sweep_graphs_avg_F08.json  066_066_sweep_graphs_avg_F08_500us_validation.json
testBenches/perf/iteration_1000&delay100000/: 040_040_sweep_graphs_avg_F08.json  040_040_sweep_graphs_avg_F08_500us_validation.json  060_060_sweep_graphs_avg_F08.json  060_060_sweep_graphs_avg_F08_500us_validation.json  066_066_sweep_graphs_avg_F08.json  066_066_sweep_graphs_avg_F08_500us_validation.json
testBenches/perf/monitoring_results/: monitor_20260126_063356_cpu.txt  monitor_20260126_063356_gpu.csv  monitor_20260126_063356_gpu_dmon.txt  monitor_20260126_063356_memory.txt  monitor_20260126_063356_vmstat.txt  monitor_20260126_063859_cpu.txt  monitor_20260126_063859_gpu.csv  monitor_20260126_063859_gpu_dmon.txt  monitor_20260126_063859_memory.txt  monitor_20260126_063859_vmstat.txt  monitor_20260126_065123_cpu.txt  monitor_20260126_065123_gpu.csv  monitor_20260126_065123_gpu_dmon.txt  monitor_20260126_065123_memory.txt  monitor_20260126_065123_vmstat.txt  monitor_20260126_152903_cpu.txt  (+4 more)
(+33 files in other folders)
